[package]
name = "reilly"
version = "0.0.1"
edition = "2021"
authors = ["Alessio Zanga <alessio.zanga@outlook.it>"]
description = "A REInforcement Learning LibrarY."
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/AlessioZanga/reilly"
repository = "https://github.com/AlessioZanga/reilly"
documentation = "https://docs.rs/reilly"
keywords = ["ai", "reinforcement", "learning"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
indicatif = "^0.16"
num = "^0.4"
polars = { version = "^0.21", features = ["dtype-slim"] }
rand = "^0.8"
rand_distr = "^0.4"
serde = { version = "^1.0", features = ["derive"] }

[dev-dependencies]
approx = "^0.5"
rand_xoshiro = "^0.6"
serde_json = "^1.0"

[profile.coverage]
inherits = "dev"
